[package]
name = "minecraft_world_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
phf = { version = "0.11", features = ["macros"] }
flate2 = "1.0.35"
shellexpand = "3.1.0"
chrono = "0.4.39"
