[package]
name = "minecraft_world_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
phf = { version = "0.11", features = ["macros"] }
flate2 = "1.0.35"
shellexpand = "3.1.0"
chrono = "0.4.39"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
fs_extra = "1.2.0"
